# noisefunge.rs

./: Cargo.toml  README.md  test.toml
src/funged/: main.rs
src/lib/: api.rs  config.rs  jack.rs  lib.rs  midi_bridge.rs  server.rs  subprocess.rs
src/lib/befunge/: charmap.rs  mod.rs  ops.rs  process.rs
src/lib/noisefunge/: befunge.rs  mod.rs
src/lib/noisefunge/befunge/: mod.rs  ops.rs  process.rs
src/nfbuffer/: main.rs
src/nfkill/: main.rs
src/nfloader/: main.rs
src/nfops/: main.rs
src/nftop/: main.rs
src/nfviewer/: main.rs
src/nfviewergl/: frag.glsl  main.rs  vert.glsl
