[package]
name = "noisefunge"
version = "0.1.0"
authors = ["Rev. Johnny Healey <rev.null@gmail.com>"]
edition = "2018"

[lib]
name = "noisefunge"
path = "src/lib/lib.rs"

[[bin]]
name = "funged"
path = "src/funged/main.rs"

[[bin]]
name = "nfviewer"
path = "src/nfviewer/main.rs"

[[bin]]
name = "nfbuffer"
path = "src/nfbuffer/main.rs"

[[bin]]
name = "nfloader"
path = "src/nfloader/main.rs"

[[bin]]
name = "nfkill"
path = "src/nfkill/main.rs"

[[bin]]
name = "nfops"
path = "src/nfops/main.rs"

[dependencies]
rand = "0.7"
jack = "0.6"
arr_macro = "0.1.3"
crossbeam-channel = "0.4.2"
pancurses = { version = "0.16", features = ["wide"] }
config = "0.9"
clap = "2.33"
http = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
querystring = "1.0"
rouille = "3.0.0"

