[package]
name = "noisefunge"
version = "0.3.4"
authors = ["Rev. Johnny Healey <rev.null@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
license-file = "LICENSE"
repository = "https://github.com/revnull/noisefunge.rs"
description = "A music livecoding environment."

[lib]
name = "noisefunge"
path = "src/lib/lib.rs"

[[bin]]
name = "funged"
path = "src/funged/main.rs"

[[bin]]
name = "nfviewer"
path = "src/nfviewer/main.rs"

[[bin]]
name = "nfviewergl"
path = "src/nfviewergl/main.rs"

[[bin]]
name = "nfbuffer"
path = "src/nfbuffer/main.rs"

[[bin]]
name = "nftop"
path = "src/nftop/main.rs"

[[bin]]
name = "nfloader"
path = "src/nfloader/main.rs"

[[bin]]
name = "nfkill"
path = "src/nfkill/main.rs"

[[bin]]
name = "nfops"
path = "src/nfops/main.rs"

[dependencies]
rand = "0.7"
jack = "0.6"
arr_macro = "0.1.3"
crossbeam-channel = "0.4.2"
pancurses = { version = "0.16", features = ["wide"] }
config = "0.9"
clap = "2.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }
rouille = "3.0"
log = "0.4"
simplelog = "0.8"

glyph_brush = "0.7"
luminance = "0.43.1"
glfw = "0.41.0"
luminance-gl = "0.16.1"
luminance-glfw = "0.14.4"
luminance-glutin = "0.11.2"
luminance-windowing = "^0.9"
luminance-glyph = "0.2.0"
ab_glyph = "0.2.11"
luminance-derive = "0.6.3"

